# FFmpegDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/cn/ray/player/: CommonAdapter.java  DNPlayer.java  DnPlayerActivity.java  MainActivity.java  ViewHolder.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml  item.xml
gradle/wrapper/: gradle-wrapper.properties
